add desc for products
